SVY-10063 WarExport should generated grouping and minmized files already on export (rewrite background image urls + a few other improvements)